# crab

./: .gitignore  .travis.yml  CMakeLists.txt  Crab_LICENSE.txt  README.md
.github/workflows/: nightly-crab-docker.yaml  test-crab-dev-docker.yaml  test-crab-docker.yml
cmake/: FindApron.cmake  FindCudd.cmake  FindElina.cmake  FindFLINT.cmake  FindGMP.cmake  FindGMPXX.cmake  FindMdd.cmake  FindPPLite.cmake  FindSSE.cmake  download_apron.cmake  download_boxes_ldd.cmake  download_elina.cmake  download_pplite.cmake  download_pplite_domains.cmake
docker/: buildpack-deps-crab.Dockerfile  buildpack-deps-crab.jammy.Dockerfile  crab.Dockerfile  crab.apron.Dockerfile  crab.dev.Dockerfile  crab.dev.apron.Dockerfile  crab.dev.elina.Dockerfile  crab.dev.pplite.Dockerfile  crab.elina.Dockerfile  crab.pplite.Dockerfile  readme.md
ikos/: COPYRIGHT  bignums.hpp  cfg_api.hpp  collections.hpp  common.hpp  congruences.hpp  constants.hpp  dbm.hpp  discrete_domains.hpp  division_operators_api.hpp  domain_products.hpp  fixpoint_iterators_api.hpp  fwd_fixpoint_iterators.hpp  intervals.hpp  intervals_congruences.hpp  linear_constraints.hpp  mergeable_map.hpp  muaz.hpp  muaz_analyzer.hpp  numerical_domains_api.hpp  octagons.hpp  patricia_trees.hpp  separate_domains.hpp  wto.hpp
ikos/dbm/: CMakeLists.txt  dbm.cpp  dbm.h  expr.cpp  (+1 more)
include/: BwdAnalyzer.hpp  Cfg.hpp  FwdAnalyzer.hpp  Liveness.hpp  VarFactory.hpp
lib/: CMakeLists.txt  abstract_domain_params.cpp  allocation_sites.cpp  array_adaptive_impl.cpp  bignums.cpp  boolean.cpp  boost_exception.cpp  congruence.cpp  constant.cpp  debug.cpp  dis_interval.cpp  interval.cpp  interval_congruence.cpp  object_info.cpp  os.cpp  region_info.cpp  safeint.cpp  sign.cpp  small_range.cpp  stats.cpp  tag.cpp  term.cpp  term_operators.cpp  types.cpp  varname_factory.cpp  wrapint.cpp  wrapped_interval.cpp
lib/boxes/: CMakeLists.txt  boxes.cpp
lib/dbm/: CMakeLists.txt  dbm.cpp  expr.cpp
lib/debug/: CMakeLists.txt  debug.cpp
lib/os/: CMakeLists.txt  os.cpp
lib/stats/: CMakeLists.txt  stats.cpp
lib/term/: CMakeLists.txt  term.cpp
make/: Makefile  README.md  analysis.cpp
tests/: CMakeLists.txt  README.md  bcrab.cpp  bcrab.hpp  bcrab_inst.hpp  common.hpp  crab.cpp  crab.hpp  crab_dom.hpp  crab_inst.hpp  crab_lang.hpp  expected_results.apron.out  expected_results.boxes.out  expected_results.elina.out  expected_results.out  expected_results.pplite.out  icrab.cpp  icrab.hpp  icrab_inst.hpp  prog-1.cc  prog-2.cc  prog-4.cc  program_options.cpp  program_options.hpp  run_coverage.sh  run_tests.sh  unif-0.cc  unif-0a.cc  unif-1.cc
tests/apron/: CMakeLists.txt  apron_bug.cc  apron_test.cc
tests/arrays/: CMakeLists.txt  array_graph_tests.cc  array_smashing_tests.cc  array_sparse_graph_tests.cc  tests.cc  unit-tests.cc
tests/assertion_crawler/: crawler-1.cc  crawler-2.cc
tests/backward/: backward-1-apron.cc  backward-1-elina.cc  backward-1.cc  backward-2-apron.cc  backward-2-boxes.cc  backward-2-elina.cc  backward-2.cc  backward-3-apron.cc  backward-3-elina.cc  backward-3.cc  backward-4-apron.cc  backward-4-boxes.cc  backward-4-elina.cc  backward-4.cc  backward-array-1-apron.cc  backward-array-1.cc  bakhirkin-apron.cc  bakhirkin-elina.cc  bakhirkin.cc  unittests-backward-apron.cc  unittests-backward-elina.cc  unittests-backward.cc
tests/boxes/: CMakeLists.txt  boxes_test.cc  ldd_test.cc
tests/cfg/: CMakeLists.txt  cfg.cc  test.cc
tests/cg/: CMakeLists.txt  cg.cc  test.cc
tests/checkers/: CMakeLists.txt  checker-tests.cc  checker.cc  entailment.cc  test.cc
tests/conc/: CMakeLists.txt  test1.cc
tests/disintervals/: CMakeLists.txt  test.cc
tests/domains/: apron-domains.cc  apron-octagons.cc  apron_bug.cc  apron_domains.cc  array_adaptive1.cc  array_adaptive2.cc  array_expansion.cc  array_graph.cc  array_smashing.cc  array_sparse_graph.cc  boxes-bug.cc  boxes-ldd.cc  boxes.cc  boxes_bug.cc  constant_domain.cc  disintervals.cc  elina-octagons.cc  elina_domains.cc  fixedtvpi.cc  fixedtvpi2.cc  flat_bool_domain1-boxes.cc  flat_bool_domain1.cc  flat_bool_domain2.cc  flat_bool_domain3.cc  flat_bool_domain4.cc  flat_bool_domain5-boxes.cc  flat_bool_domain5.cc  flat_bool_domain6.cc  flat_bool_domain7.cc  flat_bool_domain8.cc  gen_abs_dom.cc  intrinsics.cc  ldd.cc  lddtests.cc  lookahead-widening.cc  nested-1.cc  nested-2.cc  nested-3.cc  null.cc  powerset.cc  (+51 more)
tests/domains/mddboxes/: test_mdd_00.cc  test_mdd_01.cc  test_mdd_02.cc  test_mdd_03.cc  test_mdd_rename_bug.cc
tests/domains/mru/: build-mru.cc  expand1.cc  expand2.cc  fold1.cc  fold2.cc  fold3.cc
tests/domains/object/: object1.cc  object2.cc  object3.cc  object_dm_ops_1.cc  object_dom.hpp  object_join_1.cc  unittests-objects.cc
tests/domains/reference/: ref-1.cc  ref-2.cc
tests/domains/region/: region-1.cc  region-2.cc  region-3.cc  region-4.cc  region-5.cc  region-6.cc  region-7.cc  region-8.cc
tests/domains/wrapint/: wrapint.cc  wrapped_interval_domain.cc  wrapped_intervals.cc
tests/inter/: CMakeLists.txt  bu_inter-apron.cc  bu_inter.cc  inter.cc  td_inter_1-apron.cc  td_inter_1-elina.cc  td_inter_1.cc  td_inter_2.cc  td_inter_3.cc  td_inter_4.cc  td_inter_5.cc  td_inter_6.cc  td_inter_7.cc  td_inter_8.cc  test.cc
tests/liveness/: live-1.cc
tests/nullity/: CMakeLists.txt  test.cc
tests/pointers/: CMakeLists.txt  tests.cc
tests/preconditions/: bakhirkin.cc  precond-1-apron.cc  precond-1-elina.cc  precond-1.cc  precond-2-apron.cc  precond-2-elina.cc  precond-2.cc  precond-3.cc  precond-4.cc  precond-5.cc
tests/rationals/: CMakeLists.txt  test-1.cc  test-2.cc
tests/simple/: CMakeLists.txt  prog-1.cc  prog-2.cc  prog-3.cc  prog-4.cc  sparsegraph.cc  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  unittests.cc
tests/sym_cst/: CMakeLists.txt  test.cc
tests/terms/: CMakeLists.txt  terms-0.cc  terms-0a.cc  terms-1.cc  terms-2.cc  terms-3.cc  terms-4.cc
tests/thresholds/: CMakeLists.txt  test.cc  thresholds.cc
tests/transforms/: dce.cc  lower_safe_assertions.cc
tests/unif/: CMakeLists.txt  unif-0.cc  unif-0a.cc  unif-1.cc  unif-2.cc  unif-3.cc  unif-4.cc
(+331 files in other folders)
